--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "module_2/mod_2_exercises",
     "module_3/mod_3_exercises",
     "module_4/mod_4_exercises",
+    "module_5/result_option",
     "module_5/serde1",
     "module_5/serde2_hashmap",
     "module_5/serde2_vector",
